<resources>
    <string name="app_name">资源管理器</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_this_phone">手机</string>
    <string name="menu_gallery">相册</string>
    <string name="menu_fast_read">快速访问</string>
    <string name="menu_net_ftp">局域网</string>
    <string name="menu_setting">设置</string>
    <string name="menu_item_sort">排序</string>
    <string name="menu_item_sort_name">名称排序</string>
    <string name="menu_item_sort_size">大小排序</string>
    <string name="menu_item_sort_date">时间排序</string>
    <string name="menu_item_sort_type">类型排序</string>
    <string name="search">搜索</string>
    <string name="refresh">刷新</string>
    <string name="close">关闭</string>
    <string name="add_new">新建</string>
    <string name="delete">删除</string>
    <string name="communicate">自定义</string>
    <string name="copy">复制</string>
    <string name="cut">剪切</string>
    <string name="detail">属性</string>
    <string name="windows">窗口</string>
    <string name="about">关于</string>
    <string name="recycle_station">回收站</string>
    <string name="how_many_item">个项目</string>
    <string name="select">已选择</string>
    <string name="re_name">重命名</string>
    <string name="paste">粘贴</string>
    <string name="action">操作</string>
    <string name="all_choose">全选</string>
    <string name="system">系统</string>
    <string name="interval">区间选择</string>
    <string name="Invalid_path">无效路径</string>
    <string name="unable_to_access">无法访问</string>
    <string name="File_operations">文件操作</string>
    <string name="Determine_to_move_to">确定移动到</string>
    <string name="move">移动</string>
    <string name="cancle">取消</string>
    <string name="sort_err"><![CDATA[排序的时候产生一个错误~%?…#*☆&℃$︿★?未知错误]]></string>
    <string name="eat_err">页面被吃了(　o=^•ェ•)o　┏━┓,发生错误</string>
    <string name="nav_header_desc">nav_header</string>
    <string name="compress">压缩</string>
</resources>
